crates/rustynes-test-harness/tests/snapshots/external_coverage__mapper_200_Multicart200_21_in_1_21A3_1992_p1_zip.snap
---
source: crates/rustynes-test-harness/tests/external_coverage.rs
expression: text
---
rom=mapper-200-Multicart200/21-in-1 (21A3_1992) [p1][!].zip
rom_sha256=2c3ffaf60079da522d77eeb23aaa22f02a84d8de5872f74ae379c678a9b1f332
frames=1141
fb_bytes=245760
cycles=33949773
audio_samples=836505
audio_fnv1a64=c5cd386ed3adb202
checkpoint f900 fb_fnv1a64=04f6defbe04d6907
checkpoint f1100 fb_fnv1a64=f7309eadc5bb1229
