crates/rustynes-test-harness/tests/snapshots/external_coverage__mapper_200_Multicart200_36_in_1_p1.snap
---
source: crates/rustynes-test-harness/tests/external_coverage.rs
expression: text
---
rom=mapper-200-Multicart200/36-in-1 [p1].nes
rom_sha256=533d2fa2c808a454c682dd794def9361e40ec2201311fe0efa6d452cff091350
frames=1141
fb_bytes=245760
cycles=33949772
audio_samples=836505
audio_fnv1a64=e73a287ae865d65f
checkpoint f900 fb_fnv1a64=1572d1e5aeaa522b
checkpoint f1100 fb_fnv1a64=06a8ab2e873a9340
