crates/rustynes-test-harness/tests/snapshots/external_coverage__mapper_200_Multicart200_36_in_1_p1_zip.snap
---
source: crates/rustynes-test-harness/tests/external_coverage.rs
expression: text
---
rom=mapper-200-Multicart200/36-in-1 [p1].zip
rom_sha256=ef03a5bef36fa7fb4a67a8858ef01d3aea0609318e80a36c9be76aebee6a8267
frames=1141
fb_bytes=245760
cycles=33949772
audio_samples=836505
audio_fnv1a64=e73a287ae865d65f
checkpoint f900 fb_fnv1a64=1572d1e5aeaa522b
checkpoint f1100 fb_fnv1a64=06a8ab2e873a9340
