crates/rustynes-test-harness/tests/snapshots/external_coverage__mapper_201_Multicart201_8_in_1_p1.snap
---
source: crates/rustynes-test-harness/tests/external_coverage.rs
expression: text
---
rom=mapper-201-Multicart201/8-in-1 [p1].zip
rom_sha256=e7f5afa424c30e6ac682eda15885a818f2e81259daa7258c5a9aaafccef1500f
frames=1141
fb_bytes=245760
cycles=33949776
audio_samples=836505
audio_fnv1a64=58a9a6b6c4c47860
checkpoint f900 fb_fnv1a64=9801ca59adae0110
checkpoint f1100 fb_fnv1a64=9801ca59adae0110
